# brainoscorelight

./: README.md  pyproject.toml
brainos_core/: __init__.py  brain.py  code_exec.py  contracts.py  daao.py  detector.py  executor.py  hints.py  mcp.py  memory.py  privacy.py  router.py  worker.py
examples/: new_crm_agent.py
